Volumes1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    author: intelliqit
spec:
  containers:
    - name: myredis
      image: redis
      volumeMounts:
        - name: myvolume
          mountPath: /data/redis
  volumes:
    - name: myvolume
      emptyDir: {}
...
