deployment2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    author: intelliqit
    type: db
spec:
  replicas: 2
  selector:
    matchLabels:
      type: db
  template:
   metadata:
     name: mysql-pod
     labels:
       type: db
   spec:
     containers:
       - name: mydb
         image: mysql:5
...
