pod-definition1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    author: intelliqit
    type: proxy
spec:
  containers:
    - name: mynginx
      image: nginx

...
