pod-definition4.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod
  namespace: test-ns
  labels:
    author: intelliqit
    type: webserver
spec:
  containers:
    - name: myhttpd
      image: httpd
      ports:
        - containerPort: 80
          hostPort: 8080
...
