pod-definition5.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: ghost-pod
  labels:
    type: cms
spec:
  containers:
    - name: ghost
      image: ghost
...
