service2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  labels:
    author: intelliqit
spec:
  type: LoadBalancer
  ports:
    - targetPort: 2368
      port: 2368
  selector:
   type: cms
