service3.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    author: intelliqit
spec:
  ports:
    - targetPort: 5432
      port: 5432
  selector:
    author: intelliqit
    type: db
...
